--- a/style3.css
+++ b/style3.css
@@ -17,7 +17,6 @@ body {
     height: 50px;
     margin-top: 20px;
     margin-left: 20px;
-    /* border: 1px solid #fff; */
 }
 
 .score {
@@ -25,7 +24,6 @@ body {
     justify-content: center;
     align-items: center;
     gap: 300px;
-    /* border: 1px solid #fff; */
 }
 
 .time {
@@ -38,10 +36,8 @@ body {
     height: 60px;
     color: #d33a1f;
     font-size: 50px;
-    display: flex;
-    align-items: center;
     margin-left: 10px;
-    padding-left: 10px;
+    text-align: center;
     background-color: white;
     border-radius: 15px;
 }
@@ -50,14 +46,12 @@ body {
     align-items: center;
 }
 #hit_val {
-    width: 70px;
+    width: 100px;
     height: 60px;
     color: #d33a1f;
     font-size: 50px;
-    display: flex;
-    align-items: center;
     margin-left: 10px;
-    padding-left: 10px;
+    text-align: center;
     background-color: white;
     border-radius: 15px;
 } 
@@ -69,7 +63,6 @@ body {
     gap: 20px;
     display: flex;
     flex-wrap: wrap;
-    /* border: 1px solid #fff; */
 }
 #board div{
     width: 100px;
@@ -83,4 +76,22 @@ body {
     -webkit-user-drag: none;
     -webkit-user-select: none;
     -ms-user-select: none;
+}
+#gameOverPopup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background-color: #333;
+    color: white;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+}
+#gameOverPopup button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
 }
